2016-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/yuv.c (WriteYUVImage): Fix benign clang compiler warning
	regarding "variable 'x' is incremented both in the loop header and
	in the loop body".

	* configure.ac: Fixes to use clang's OpenMP runtime library
	(-lomp) for clang 3.8 and later.  Specifically tested with clang
	3.8 on Ubuntu 16.04 'xenial'.  Problem was reported by Holger
	Hoffstätte via private email.

	* NEWS.txt: Bring up to date with latest changes.

2016-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Reject abnormally absurd gradient
	size requests (many absurd requests are still allowed).  Provide
	detailed error reports when a gradient is rejected.

	* coders/svg.c: Support units for 'stroke-dashoffset'.

2016-07-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/annotate.c (EscapeParenthesis): In private email on
	2016-07-07, Gustavo Grieco notified us of a heap overflow in
	EscapeParenthesis().  I was not able to reproduce the issue but
	changed the implementation with the suspicion that the
	implementation has a bug, and due to noticing arbitary limits and
	inefficiency.

2016-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Fix absolute and arbitrary gradient
	dimension sanity checks which caused gradient requests to fail.
	Resolves SourceForge issue #392 "SVG 'push defs' fails (Debian
	bugs 829063 and 828120)".

2016-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/security.rst: Add discussion of SVG format and SSRF
	vulnerability.

2016-06-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (ReadSVGImage): Assure that SVGInfo data is freed
	when XMP parsing is aborted due to an error.

2016-06-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated NEWS with changes since last release.

	* www/security.rst: Add a page about GraphicsMagick security.
